--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "knownsec-fed",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
+  "homepage": ".",
   "dependencies": {
+    "electron": "^3.0.10",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
@@ -11,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-start": "electron .",
+    "package":  "electron-packager . helloworld --platform=win32 --arch=x64 --electron-version=3.0.10 --overwrite --ignore=node_modules --ignore=.gitignore"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "electron-packager": "^12.2.0"
+  }
 }
