--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knownsec-fed",
+  "name": "ting-app",
   "version": "0.1.0",
   "private": true,
   "main": "main.js",
@@ -7,6 +7,8 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
+    "antd": "^3.10.8",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -46,6 +48,7 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
